--- a/sass/lidmagnit/_sec_checklist.scss
+++ b/sass/lidmagnit/_sec_checklist.scss
@@ -1,13 +1,13 @@
 .sec_checklist {
-    padding-top: 51px;
-    padding-bottom: 73px;
+    padding-top: 3.1875rem;
+    padding-bottom: 4.5625rem;
 
     .sec_title {
         p {
             text-align: left;
             font-style: normal;
             font-weight: 600;
-            font-size: 20px;
+            font-size: 1.25rem;
             line-height: 140%;
             color: #ffffff;
             margin-bottom: 0;
@@ -16,17 +16,17 @@
         h2 {
             font-style: normal;
             font-weight: 600;
-            font-size: 30px;
+            font-size: 1.875rem;
             line-height: 140%;
             color: #FCFCFC;
             text-transform: uppercase;
-            margin-bottom: 49px;
-            margin-top: 29px;
+            margin-bottom: 3.0625rem;
+            margin-top: 1.8125rem;
             text-align: left;
         }
 
         .btn {
-            max-width: 249px;
+            max-width: 15.5625rem;
             width: 100%;
         }
     }
@@ -50,7 +50,7 @@
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0;
+        padding: 1.875rem 0;
 
         .row {
             flex-direction: column-reverse !important;
@@ -58,19 +58,19 @@
 
         .sec_title {
             p {
-                font-size: 18px;
+                font-size: 1.125rem;
             }
 
             h2 {
-                font-size: 22px;
-                margin-bottom: 30px;
-                margin-top: 20px;
+                font-size: 1.375rem;
+                margin-bottom: 1.875rem;
+                margin-top: 1.25rem;
             }
         }
 
         img {
-            max-width: 200px;
-            margin-bottom: 40px;
+            max-width: 12.5rem;
+            margin-bottom: 2.5rem;
         }
 
         .flex-row-reverse .sec_title {
