--- a/sass/lidmagnit/_sec_what_results.scss
+++ b/sass/lidmagnit/_sec_what_results.scss
@@ -6,29 +6,29 @@
 
         p {
             font-weight: 500;
-            font-size: 22px;
+            font-size: 1.375rem;
             line-height: 140%;
-            margin-top: 45px;
-            margin-bottom: 35px;
+            margin-top: 2.8125rem;
+            margin-bottom: 2.1875rem;
         }
     }
 
     .paragraph {
         font-style: normal;
         font-weight: 500;
-        font-size: 18px;
+        font-size: 1.125rem;
         line-height: 150%;
         color: #000000;
-        margin-bottom: 24px;
+        margin-bottom: 1.5rem;
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0;
+        padding: 1.875rem 0;
 
         .sec_title p {
-            font-size: 16px;
-            margin-top: 20px;
-            margin-bottom: 30px;
+            font-size: 1rem;
+            margin-top: 1.25rem;
+            margin-bottom: 1.875rem;
         }
 
         .circle {
@@ -42,10 +42,10 @@
         p {
             font-style: normal;
             font-weight: 500;
-            font-size: 18px;
+            font-size: 1.125rem;
             line-height: 160%;
-            max-width: 684px;
-            margin-top: 10px;
+            max-width: 42.75rem;
+            margin-top: 0.625rem;
         }
     }
 }
