--- a/sass/lms_booster/_sec_best_students.scss
+++ b/sass/lms_booster/_sec_best_students.scss
@@ -1,6 +1,6 @@
 .sec_best_students {
     position: relative;
-    padding: 0 0 258px;
+    padding: 0 0 16.125rem;
     background-color: #FBFBFB;
 
     .img_wrapp {
@@ -10,8 +10,8 @@
         img {
             position: absolute;
             position: absolute;
-            right: 0px;
-            top: 60px;
+            right: 0rem;
+            top: 3.75rem;
         }
     }
 
@@ -19,27 +19,27 @@
         .upper-title {
             font-style: normal;
             font-weight: 600;
-            font-size: 32px;
+            font-size: 2rem;
             line-height: 140%;
             margin: 0;
-            margin-bottom: 37px;
+            margin-bottom: 2.3125rem;
             text-transform: uppercase;
         }
 
         .under-title {
             font-style: normal;
             font-weight: 600;
-            font-size: 24px;
+            font-size: 1.5rem;
             line-height: 140%;
             color: #5C5B5B;
-            margin-bottom: 50px;
+            margin-bottom: 3.125rem;
             text-transform: uppercase;
         }
 
         h2 {
             font-style: normal;
             font-weight: bold;
-            font-size: 50px;
+            font-size: 3.125rem;
             line-height: 140%;
             margin: 0;
             color: #5C5B5B;
@@ -50,8 +50,8 @@
     .bg-gradient {
         position: relative;
         z-index: 1;
-        padding-top: 67px;
-        padding-bottom: 60px;
+        padding-top: 4.1875rem;
+        padding-bottom: 3.75rem;
 
         &:after {
             content: '';
@@ -71,32 +71,32 @@
         padding-bottom: 0;
 
         .bg-gradient {
-            padding: 30px 0;
+            padding: 1.875rem 0;
         }
 
         .img_wrapp {
-            margin-bottom: 30px;
+            margin-bottom: 1.875rem;
             text-align: center;
 
             img {
                 position: initial;
-                max-width: 250px;
+                max-width: 15.625rem;
             }
         }
 
         .sec_title.title-left {
             .upper-title {
-                font-size: 19px;
-                margin-bottom: 15px;
+                font-size: 1.1875rem;
+                margin-bottom: 0.9375rem;
             }
 
             .under-title {
-                font-size: 15px;
-                margin-bottom: 25px;
+                font-size: 0.9375rem;
+                margin-bottom: 1.5625rem;
             }
 
             h2 {
-                font-size: 21px;
+                font-size: 1.3125rem;
             }
         }
     }
