--- a/sass/lms_booster/_sec_faq.scss
+++ b/sass/lms_booster/_sec_faq.scss
@@ -1,14 +1,14 @@
 .sec_faq {
-    padding: 84px 0 140px;
+    padding: 5.25rem 0 8.75rem;
 
     .circle {
-        width: 50px;
-        right: -30px;
+        width: 3.125rem;
+        right: -1.875rem;
         top: 56%;
     }
 
     .dubl_line_vertical {
-        left: -50px;
+        left: -3.125rem;
         top: 75%;
         transform: rotate(-90deg);
     }
@@ -16,19 +16,19 @@
     .sec_title h2 {
         font-style: normal;
         font-weight: bold;
-        font-size: 34px;
+        font-size: 2.125rem;
         line-height: 140%;
         text-transform: uppercase;
         margin: 0;
-        margin-bottom: 72px;
+        margin-bottom: 4.5rem;
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0;
+        padding: 1.875rem 0;
 
         .sec_title h2 {
-            font-size: 21px;
-            margin-bottom: 30px;
+            font-size: 1.3125rem;
+            margin-bottom: 1.875rem;
         }
     }
 }
