--- a/sass/lms_booster/_sec_fear.scss
+++ b/sass/lms_booster/_sec_fear.scss
@@ -1,11 +1,11 @@
 .sec_fear {
     position: relative;
-    padding: 76px 0 126px;
+    padding: 4.75rem 0 7.875rem;
 
     .circle {
-        width: 50px;
+        width: 3.125rem;
         top: 78%;
-        right: 520px;
+        right: 32.5rem;
     }
 
     .img_wrapp {
@@ -14,67 +14,67 @@
 
         img {
             position: absolute;
-            right: -30px;
-            bottom: 0px;
+            right: -1.875rem;
+            bottom: 0rem;
         }
     }
 
     .sec_title.title-left {
         .upper-title {
-            margin-bottom: 78px;
+            margin-bottom: 4.875rem;
             margin-top: 0;
         }
 
         h2 {
-            margin-bottom: 55px;
+            margin-bottom: 3.4375rem;
         }
 
         .under-title {
             color: #5C5B5B;
             font-style: normal;
             font-weight: bold;
-            font-size: 20px;
+            font-size: 1.25rem;
             line-height: 140%;
-            margin-bottom: 51px;
+            margin-bottom: 3.1875rem;
         }
     }
 
     .btn {
-        max-width: 350px;
+        max-width: 21.875rem;
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0;
+        padding: 1.875rem 0;
 
         .sec_title.title-left {
             .upper-title {
-                font-size: 19px;
-                margin-bottom: 30px;
+                font-size: 1.1875rem;
+                margin-bottom: 1.875rem;
             }
 
             h2 {
-                font-size: 22px;
-                margin-bottom: 30px;
+                font-size: 1.375rem;
+                margin-bottom: 1.875rem;
             }
 
             .under-title {
-                font-size: 16px;
-                margin-bottom: 30px;
+                font-size: 1rem;
+                margin-bottom: 1.875rem;
             }
         }
 
         .btn {
-            padding: 15px;
+            padding: 0.9375rem;
         }
 
         .img_wrapp {
-            height: 220px;
+            height: 13.75rem;
             text-align: center;
-            margin-bottom: 30px; 
+            margin-bottom: 1.875rem; 
 
             img {
                 position: initial;
-                max-width: 200px;
+                max-width: 12.5rem;
             }
         }
     }
