--- a/sass/lms_booster/_sec_get-out-pit.scss
+++ b/sass/lms_booster/_sec_get-out-pit.scss
@@ -1,6 +1,6 @@
 .sec_get-out-pit {
     position: relative;
-    padding: 86px 0 71px;
+    padding: 5.375rem 0 4.4375rem;
 
     &:after {
         content: '';
@@ -8,7 +8,7 @@
         bottom: 0;
         left: 0;
         width: 100%;
-        height: 118px;
+        height: 7.375rem;
         display: block;
         background: linear-gradient(180deg, #FBFBFB 0%, rgba(255, 255, 255, 0) 100%), #EFEFEF;
         z-index: -1;
@@ -20,37 +20,37 @@
 
         img {
             position: absolute;
-            right: -30px;
-            top: -50px;
+            right: -1.875rem;
+            top: -3.125rem;
         }
     }
 
     @media (max-width: 767.98px) {
-        padding: 40px 0;
+        padding: 2.5rem 0;
 
         .sec_title.title-left {
             .upper-title {
-                font-size: 16px;
-                margin-bottom: 30px;
+                font-size: 1rem;
+                margin-bottom: 1.875rem;
             }
 
             .under-title {
-                font-size: 15px;
+                font-size: 0.9375rem;
             }
 
             h2 {
-                font-size: 22px;
+                font-size: 1.375rem;
             }
         }
 
         .img_wrapp {
-            height: 230px;
+            height: 14.375rem;
             text-align: center;
-            margin-top: 20px; 
+            margin-top: 1.25rem; 
 
             img {
                 position: initial;
-                max-width: 300px;
+                max-width: 18.75rem;
             }
         }
     }
