--- a/sass/lms_booster/_sec_guarantee.scss
+++ b/sass/lms_booster/_sec_guarantee.scss
@@ -1,6 +1,6 @@
 .sec_guarantee {
     position: relative;
-    padding: 0 0 187px;
+    padding: 0 0 11.6875rem;
     background-color: #FBFBFB;
 
     .img_wrapp {
@@ -9,9 +9,9 @@
 
         img {
             position: absolute;
-            right: 0px;
-            top: -60px;
-            width: 370px;
+            right: 0rem;
+            top: -3.75rem;
+            width: 23.125rem;
         }
     }
 
@@ -19,26 +19,26 @@
         .upper-title {
             font-style: normal;
             font-weight: 500;
-            font-size: 30px;
+            font-size: 1.875rem;
             line-height: 140%;
             margin: 0;
-            margin-bottom: 37px;
+            margin-bottom: 2.3125rem;
         }
 
         .under-title {
             font-style: normal;
             font-weight: 500;
-            font-size: 20px;
+            font-size: 1.25rem;
             line-height: 140%;
             color: #5C5B5B;
-            margin-bottom: 31px;
+            margin-bottom: 1.9375rem;
             text-transform: initial;
         }
 
         h2 {
             font-style: normal;
             font-weight: bold;
-            font-size: 30px;
+            font-size: 1.875rem;
             line-height: 140%;
             margin: 0;
             color: #5C5B5B;
@@ -48,8 +48,8 @@
     .bg-gradient {
         position: relative;
         z-index: 1;
-        padding-top: 135px;
-        padding-bottom: 49px;
+        padding-top: 8.4375rem;
+        padding-bottom: 3.0625rem;
 
         &:after {
             content: '';
@@ -70,32 +70,32 @@
 
         .bg-gradient {
             padding-top: 0;
-            padding-bottom: 30px;
+            padding-bottom: 1.875rem;
         }
 
         .sec_title.title-left {
             .upper-title {
-                font-size: 19px;
-                margin-bottom: 15px;
+                font-size: 1.1875rem;
+                margin-bottom: 0.9375rem;
             }
 
             .under-title {
-                font-size: 16px;
-                margin-bottom: 15px;
+                font-size: 1rem;
+                margin-bottom: 0.9375rem;
             }
 
             h2 {
-                font-size: 22px;
+                font-size: 1.375rem;
             }
         }
 
         .img_wrapp {
             text-align: center;
-            margin: 0 0 30px;
+            margin: 0 0 1.875rem;
 
             img {
                 position: initial;
-                max-width: 200px;
+                max-width: 12.5rem;
             }
         }
     }
