--- a/sass/lms_booster/_sec_practics.scss
+++ b/sass/lms_booster/_sec_practics.scss
@@ -1,34 +1,34 @@
 .sec_practics {
-    padding: 57px 0 55px;
+    padding: 3.5625rem 0 3.4375rem;
     background: linear-gradient(180deg, #FFFFFF 0%, rgba(255, 255, 255, 0) 100%), #F4F4F4;
 
     .sec_title h2 {
-        margin-bottom: 63px;
+        margin-bottom: 3.9375rem;
     }
 
     .circle {
-        width: 50px;
-        right: -51px;
-        top: 148px;
+        width: 3.125rem;
+        right: -3.1875rem;
+        top: 9.25rem;
     }
 
     .dubl_line_vertical {
-        right: 15px;
-        top: 1106px;
+        right: 0.9375rem;
+        top: 69.125rem;
         transform: rotate(-90deg);
     }
 
     .dubl_line_vertical2 {
-        left: -100px;
-        top: 476px;
+        left: -6.25rem;
+        top: 29.75rem;
         transform: rotate(-90deg);
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0;
+        padding: 1.875rem 0;
 
         .sec_title h2 {
-            margin-bottom: 30px;
+            margin-bottom: 1.875rem;
         }
     }
 }
