--- a/sass/lms_booster/_sec_programm.scss
+++ b/sass/lms_booster/_sec_programm.scss
@@ -1,28 +1,28 @@
 .sec_programm {
-    padding: 118px 0 131px;
+    padding: 7.375rem 0 8.1875rem;
     background-color: #fbf3e9;
 
     .circle {
-        width: 50px;
-        right: -60px;
+        width: 3.125rem;
+        right: -3.75rem;
         top: 86%;
     }
 
     .dubl_line_vertical {
-        left: -106px;
+        left: -6.625rem;
         top: 67%;
         transform: rotate(-90deg);
 
     }
 
     .dubl_line_vertical2 {
-        right: -106px;
+        right: -6.625rem;
         top: 52%;
         transform: rotate(-90deg);
     }
 
     .sec_title {
-        margin-bottom: 60px;
+        margin-bottom: 3.75rem;
     }
 
     b {
@@ -30,15 +30,15 @@
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0;
+        padding: 1.875rem 0;
 
         .sec_title {
-            margin-bottom: 40px;
+            margin-bottom: 2.5rem;
         }
 
         .btn-success.btn-lg {
-            font-size: 17px;
-            padding: 15px;
+            font-size: 1.0625rem;
+            padding: 0.9375rem;
         }
     }
 }
