--- a/sass/lms_booster/_sec_start_your_way.scss
+++ b/sass/lms_booster/_sec_start_your_way.scss
@@ -1,25 +1,25 @@
 .sec_start_your_way {
-    padding: 82px 0 120px;
+    padding: 5.125rem 0 7.5rem;
 
     .sec_title {
         h2 {
-            margin-bottom: 64px;
+            margin-bottom: 4rem;
         }
     }
 
     .card {
-        padding: 28px 38px 56px;
+        padding: 1.75rem 2.375rem 3.5rem;
         background: #FFFFFF;
-        box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
-        border-radius: 15px;
+        box-shadow: 0rem 0rem 1.5625rem rgba(0, 0, 0, 0.15);
+        border-radius: 0.9375rem;
 
         .card-title {
             font-style: normal;
             font-weight: 600;
-            font-size: 25px;
+            font-size: 1.5625rem;
             line-height: 140%;
             color: #5C5B5B;
-            margin-bottom: 36px;
+            margin-bottom: 2.25rem;
         }
     }
 
@@ -27,22 +27,22 @@
         img {
             display: inline-block;
             vertical-align: middle;
-            margin-bottom: 44px;
+            margin-bottom: 2.75rem;
         }
 
         p {
             font-style: normal;
             font-weight: 500;
-            font-size: 18px;
+            font-size: 1.125rem;
             line-height: 140%;
             margin: 0;
-            margin-bottom: 38px;
+            margin-bottom: 2.375rem;
             color: #828282;
         }
 
         h3 {
             font-weight: 600;
-            font-size: 20px;
+            font-size: 1.25rem;
             line-height: 140%;
             text-transform: uppercase;
             color: #5C5B5B;
@@ -52,56 +52,56 @@
     // abs_pic
 
     .circle {
-        width: 50px;
-        right: -100px;
+        width: 3.125rem;
+        right: -6.25rem;
         top: -3%;
     }
 
     .dubl_line {
-        right: 160px;
+        right: 10rem;
         top: 103%;
         transform: rotate(180deg);
     }
 
     .dubl_line_vertical {
-        left: -10px;
+        left: -0.625rem;
         top: 40%;
         transform: rotate(90deg);
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0;
+        padding: 1.875rem 0;
 
         .sec_title h2 {
-            margin-bottom: 40px;
+            margin-bottom: 2.5rem;
         }
 
         .text-block {
             img {
-                max-width: 170px;
+                max-width: 10.625rem;
             }
 
             p {
-                font-size: 16px;
-                margin-bottom: 20px;
+                font-size: 1rem;
+                margin-bottom: 1.25rem;
             }
 
             h3 {
-                margin-bottom: 30px;
-                font-size: 18px;
+                margin-bottom: 1.875rem;
+                font-size: 1.125rem;
             }
         }
 
         .card {
-            padding: 20px 15px;
-            margin-bottom: 20px;
+            padding: 1.25rem 0.9375rem;
+            margin-bottom: 1.25rem;
             box-shadow: none;
-            border: 1px solid #d6d6d6;
-            border-radius: 8px;
+            border: 0.0625rem solid #d6d6d6;
+            border-radius: 0.5rem;
 
             .card-title {
-                font-size: 19px;
-                margin-bottom: 20px;
+                font-size: 1.1875rem;
+                margin-bottom: 1.25rem;
             }
         }
 
