--- a/sass/lms_booster/_sec_tariffs.scss
+++ b/sass/lms_booster/_sec_tariffs.scss
@@ -1,19 +1,19 @@
 .sec_tariffs {
-    padding: 57px 0 71px;
+    padding: 3.5625rem 0 4.4375rem;
 
     .sec_title {
         h2 {
-            margin-bottom: 35px;
+            margin-bottom: 2.1875rem;
         }
 
         p {
             font-style: normal;
             font-weight: 500;
-            font-size: 24px;
+            font-size: 1.5rem;
             line-height: 140%;
             text-align: center;
             color: #828282;
-            margin-bottom: 45px;
+            margin-bottom: 2.8125rem;
         }
     }
 
@@ -24,18 +24,18 @@
                 vertical-align: middle;
 
                 img {
-                    width: 18px;
-                    min-width: 18px;
-                    height: 18px;
+                    width: 1.125rem;
+                    min-width: 1.125rem;
+                    height: 1.125rem;
                 }
             }
 
             th {
-                padding-left: 22px;
-                padding-right: 22px;
+                padding-left: 1.375rem;
+                padding-right: 1.375rem;
                 font-style: normal;
                 font-weight: 500;
-                font-size: 16px;
+                font-size: 1rem;
                 line-height: 120%;
                 color: #828282;
             }
@@ -46,7 +46,7 @@
                 border-top: transparent;
                 background-image: linear-gradient(to right, #D6D6D6 50%, rgba(255, 255, 255, 0) 0%);
                 background-position: bottom;
-                background-size: 10px 1px;
+                background-size: 0.625rem 0.0625rem;
                 background-repeat: repeat-x;
             }
 
@@ -83,15 +83,15 @@
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0;
+        padding: 1.875rem 0;
 
         .sec_title {
             h2 {
-                margin-bottom: 20px;
+                margin-bottom: 1.25rem;
             }
 
             p {
-                font-size: 16px;
+                font-size: 1rem;
             }
         }
     }
@@ -100,39 +100,39 @@
     .text-green {
         font-style: normal;
         font-weight: 500;
-        font-size: 14px;
+        font-size: 0.875rem;
         line-height: 130%;
         text-align: center;
         color: #58B58B;
         display: block;
-        margin-bottom: 10px;
+        margin-bottom: 0.625rem;
     }
 
     .price {
         font-style: normal;
         font-weight: normal;
-        font-size: 32px;
+        font-size: 2rem;
         line-height: 130%;
         text-align: center;
         color: #58B58B;
         display: block;
-        margin-bottom: 15px;
+        margin-bottom: 0.9375rem;
     }
 
     .text-gray {
         font-style: normal;
         font-weight: 500;
-        font-size: 14px;
+        font-size: 0.875rem;
         line-height: 130%;
         text-align: center;
         color: #828282;
-        margin-top: 15px;
+        margin-top: 0.9375rem;
         display: block;
     }
 
     .btn-success {
-        height: 40px;
-        width: 170px;
+        height: 2.5rem;
+        width: 10.625rem;
         font-weight: 600;
         color: #FCFCFC;
     }
@@ -140,18 +140,18 @@
 
 .mob_tariffs {
     .card {
-        margin-bottom: 30px;
-        margin-bottom: 30px;
+        margin-bottom: 1.875rem;
+        margin-bottom: 1.875rem;
         overflow: hidden;
-        border-radius: 5px;
-        box-shadow: 0 3px 7px rgba(0, 0, 0, 0.1);
+        border-radius: 0.3125rem;
+        box-shadow: 0 0.1875rem 0.4375rem rgba(0, 0, 0, 0.1);
     }
 
     .card-header {
         background-color: #58B58B;
         font-style: normal;
         font-weight: 600;
-        font-size: 19px;
+        font-size: 1.1875rem;
         line-height: 170%;
         text-align: center;
         color: #FCFCFC;
@@ -159,7 +159,7 @@
     }
 
     .card-body {
-        padding: 25px 15px;
+        padding: 1.5625rem 0.9375rem;
     }
 
     .card-footer {
@@ -169,7 +169,7 @@
         .btn-success {
             width: 100%;
             margin: 0 auto;
-            height: 50px;
+            height: 3.125rem;
         }
     }
 
@@ -181,26 +181,26 @@
 
     li {
         font-weight: 500;
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 130%;
         display: flex;
         align-items: flex-start;
         color: #828282;
 
         &:not(:last-of-type) {
-            margin-bottom: 15px;
+            margin-bottom: 0.9375rem;
         }
 
         img {
-            width: 18px;
+            width: 1.125rem;
             height: auto;
             display: inline-block;
-            margin-top: 3px;
-            margin-right: 17px;
+            margin-top: 0.1875rem;
+            margin-right: 1.0625rem;
         }
 
         b {
-            font-size: 20px;
+            font-size: 1.25rem;
         }
     }
 }
