--- a/sass/lms_booster/_sec_what_results.scss
+++ b/sass/lms_booster/_sec_what_results.scss
@@ -1,49 +1,49 @@
 .sec_what_results {
-    padding: 74px 0 67px;
+    padding: 4.625rem 0 4.1875rem;
 
     .sec_title h2 {
-        margin-bottom: 66px;
+        margin-bottom: 4.125rem;
     }
 
     // abs_pic
 
     .dubl_line_vertical {
-        left: -90px;
+        left: -5.625rem;
         top: 68%;
         transform: rotate(90deg);
     }
 
     .circle {
-        width: 50px;
-        right: -90px;
+        width: 3.125rem;
+        right: -5.625rem;
         top: 36%;
         left: initial;
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0;
+        padding: 1.875rem 0;
 
         .sec_title h2 {
-            margin-bottom: 40px;
+            margin-bottom: 2.5rem;
         }
     }
 }
 
 .sec_what_results_1 {
     .dubl_line_vertical2 {
-        left: -83px;
-        top: 370px;
+        left: -5.1875rem;
+        top: 23.125rem;
         transform: rotate(-90deg);
     }
 
     .circle {
-        width: 50px;
-        right: 0px;
-        top: 0px;
+        width: 3.125rem;
+        right: 0rem;
+        top: 0rem;
     }
 
     .dubl_line {
-        right: 90px;
+        right: 5.625rem;
         top: 98%;
         transform: rotate(180deg);
     }
