--- a/sass/vebinar/_sec_form_master_class.scss
+++ b/sass/vebinar/_sec_form_master_class.scss
@@ -1,93 +1,93 @@
 .sec_form_master_class {
-    padding: 92px 0 65px;
+    padding: 5.75rem 0 4.0625rem;
 
     .dubl_line_vertical {
-        left: -94px;
-        top: 276px;
+        left: -5.875rem;
+        top: 17.25rem;
         transform: rotate(-90deg);
     }
 
     h2 {
         font-style: normal;
         font-weight: bold;
-        font-size: 34px;
+        font-size: 2.125rem;
         line-height: 140%;
         text-transform: uppercase;
         color: #F2F2F2;
-        margin-bottom: 41px;
+        margin-bottom: 2.5625rem;
     }
 
     .form-control {
         background: #FFFFFF;
-        border: 1px solid #375476;
+        border: 0.0625rem solid #375476;
         box-sizing: border-box;
-        border-radius: 5px;
+        border-radius: 0.3125rem;
     }
 
     .btn {
-        margin-top: 20px;
+        margin-top: 1.25rem;
     }
 
     &.with_dop_txt {
         .upper-title {
             font-style: normal;
             font-weight: 500;
-            font-size: 18px;
+            font-size: 1.125rem;
             line-height: 140%;
             color: #FCFCFC;
-            margin-bottom: 15px;
+            margin-bottom: 0.9375rem;
         }
 
         .circle {
-            width: 50px;
-            left: -104px;
-            top: 194px;
+            width: 3.125rem;
+            left: -6.5rem;
+            top: 12.125rem;
         }
 
         .dubl_line_vertical {
-            left: 330px;
-            top: 582px;
+            left: 20.625rem;
+            top: 36.375rem;
             transform: rotate(-90deg);
         }
 
         h2 {
-            margin-bottom: 19px;
+            margin-bottom: 1.1875rem;
             font-weight: 600;
-            font-size: 32px;
+            font-size: 2rem;
             line-height: 140%;
         }
 
         .under-title {
             font-weight: 500;
-            font-size: 18px;
+            font-size: 1.125rem;
             line-height: 140%;
             color: #FCFCFC;
-            margin-bottom: 40px;
+            margin-bottom: 2.5rem;
         }
 
         @media (max-width: 767.98px) {
             h2 {
-                font-size: 22px;
+                font-size: 1.375rem;
             }
         }
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0;
+        padding: 1.875rem 0;
 
         h2 {
-            font-size: 23px;
+            font-size: 1.4375rem;
         }
 
         .text-center {
             position: relative;
-            height: 300px;
+            height: 18.75rem;
 
             img {
                 position: absolute;
                 display: inline-block;
-                transform: rotate(-90deg) translateY(40px) translateX(80%);
-                width: 200px;
+                transform: rotate(-90deg) translateY(2.5rem) translateX(80%);
+                width: 12.5rem;
             }
         }
     }
