--- a/sass/vebinar/_sec_product.scss
+++ b/sass/vebinar/_sec_product.scss
@@ -1,34 +1,34 @@
 .sec_product {
     background-image: none;
-    padding-top: 66px;
+    padding-top: 4.125rem;
 
     .upper-title {
         font-style: normal;
         font-weight: bold;
-        font-size: 24px;
+        font-size: 1.5rem;
         line-height: 140%;
         text-transform: uppercase;
         color: #4F4F4F;
-        margin-bottom: 11px;
+        margin-bottom: 0.6875rem;
     }
 
     h1 {
         font-style: normal;
         font-weight: bold;
-        font-size: 38px;
+        font-size: 2.375rem;
         line-height: 140%;
         text-transform: uppercase;
-        margin-bottom: 37px;
+        margin-bottom: 2.3125rem;
     }
 
     .undertitle_wrapp {
-        margin-bottom: 55px;
+        margin-bottom: 3.4375rem;
     }
 
     .undertitle {
         font-style: normal;
         font-weight: 600;
-        font-size: 18px;
+        font-size: 1.125rem;
         line-height: 160%;
         text-transform: uppercase;
         color: #4F4F4F;
@@ -36,21 +36,21 @@
 
     .date_wrap .item .date {
         background: #FFFFFF;
-        box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.07);
-        border-radius: 5px;
-        height: 85px;
+        box-shadow: 0.0625rem 0.0625rem 0.125rem rgba(0, 0, 0, 0.07);
+        border-radius: 0.3125rem;
+        height: 5.3125rem;
         margin: 0;
         border: none;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        padding-left: 18px;
-        padding-right: 18px;
+        padding-left: 1.125rem;
+        padding-right: 1.125rem;
 
         span {
             font-style: normal;
             font-weight: 500;
-            font-size: 14px;
+            font-size: 0.875rem;
             line-height: 130%;
             color: #828282;
         }
@@ -58,7 +58,7 @@
         div {
             font-style: normal;
             font-weight: normal;
-            font-size: 30px;
+            font-size: 1.875rem;
             line-height: 130%;
             color: #4F4F4F;
             margin: 0;
@@ -66,73 +66,73 @@
     }
 
     .card {
-        margin-bottom: 103px;
-        padding: 22px;
+        margin-bottom: 6.4375rem;
+        padding: 1.375rem;
     }
 
     // abs_pic
 
     .circle {
-        width: 50px;
+        width: 3.125rem;
         left: initial;
-        right: 408px;
-        top: 372px;
+        right: 25.5rem;
+        top: 23.25rem;
     }
 
     .dubl_line_vertical {
-        right: -40px;
-        top: 250px;
+        right: -2.5rem;
+        top: 15.625rem;
         transform: rotate(90deg);
     }
 
     .circle_orange {
-        right: 10px;
-        top: 709px;
+        right: 0.625rem;
+        top: 44.3125rem;
         left: initial;
     }
 
     @media (max-width: 767.98px) {
-        padding: 30px 0 0;
+        padding: 1.875rem 0 0;
 
         h1 {
-            font-size: 19px;
+            font-size: 1.1875rem;
             margin-bottom: 0;
             text-align: left;
         }
 
         .upper-title {
-            font-size: 16px;
+            font-size: 1rem;
         }
 
         .img_wrapp {
-            margin: 25px 0px 0;
-            height: 325px;
+            margin: 1.5625rem 0rem 0;
+            height: 20.3125rem;
 
             img {
-                max-width: 250px;
+                max-width: 15.625rem;
             }
         }
 
         .undertitle {
-            font-size: 13px;
+            font-size: 0.8125rem;
         }
 
         .undertitle_wrapp {
             display: flex;
             flex-direction: column;
             align-items: flex-start;
-            margin-bottom: 15px;
+            margin-bottom: 0.9375rem;
 
             .date_wrap {
 
                 .item {
                     &:first-child {
                         // margin-right: 0;
-                        margin-bottom: 12px;
+                        margin-bottom: 0.75rem;
                     }
 
                     .date {
-                        height: 65px;
+                        height: 4.0625rem;
                     }
                 }
             }
