--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -115,6 +115,9 @@
             i {
                 margin-top: 10px;
             }
+            br {
+                display: block;
+            }
         }
 
         .card {
