--- a/sass/newland/_sec_my_projects.scss
+++ b/sass/newland/_sec_my_projects.scss
@@ -65,7 +65,7 @@
         }
 
         .media-image {
-            max-width: 100%;
+            width: 200px;
         }
 
         .media.vertical {
