--- a/sass/newland/_sec_are_you_ready.scss
+++ b/sass/newland/_sec_are_you_ready.scss
@@ -17,6 +17,9 @@
             font-size: 18px;
             line-height: 130%;
             margin-bottom: 50px;
+            b {
+              font-size: 20px;
+            }
         }
     }
 
