--- a/sass/newland/_sec_goal.scss
+++ b/sass/newland/_sec_goal.scss
@@ -80,3 +80,12 @@
         }
     }
 }
+@media (min-width: 768px) and (max-width: 992px) {
+    .sec_goal {
+        .sec_title {
+            h2 {
+                margin: 23px 0 160px;
+            }
+        }
+    }
+}
