--- a/sass/newland/_sec_product.scss
+++ b/sass/newland/_sec_product.scss
@@ -28,7 +28,7 @@
 
     .undertitle {
         font-weight: 500;
-        font-size: 20px;
+        font-size: 18px;
         line-height: 150%;
         text-transform: uppercase;
         color: #828282;
@@ -182,6 +182,28 @@
 
         .col-md-8 {
             order: 2;
+        }
+    }
+}
+@media (min-width: 768px) and (max-width: 992px){
+    .sec_product {
+        .undertitle {
+            font-size: 12px;
+            i {
+                margin-top: 10px;
+            }
+        }
+        .img_wrapp {
+            position: relative;
+            width: 100%;
+            height: 100%;
+            img {
+                position: absolute;
+                bottom: 0;
+                right: -60px;
+                width: 300px;
+                filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
+            }
         }
     }
 }
