--- a/sass/newland/_header.scss
+++ b/sass/newland/_header.scss
@@ -88,6 +88,7 @@
 
 .navbar-brand {
     display: flex;
+    width: 120px;
     align-items: center;
     background-color: #ffffff;
     padding: 3px 17px 5px 12px;
