--- a/sass/newland/_sec_your_mentor.scss
+++ b/sass/newland/_sec_your_mentor.scss
@@ -34,6 +34,7 @@
 
         img {
             position: absolute;
+            width: 360px;
             bottom: 0;
             left: 0;
             filter: drop-shadow(20px 20px 25px rgba(0, 0, 0, 0.3));
