--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -157,3 +157,20 @@
         }
     }
 }
+@media (min-width: 768px) and (max-width: 992px) {
+    .sec_profile{
+        .img_wrapp {
+            position: relative;
+            width: 100%;
+            height: 100%;
+
+            img {
+                position: absolute;
+                bottom: 0;
+                right: -70px;
+                width: 380px;
+                filter: drop-shadow(20px 20px 25px rgba(0,0,0,0.3));
+            }
+        }
+      }
+}
