--- a/sass/newland/_sec_success_stories.scss
+++ b/sass/newland/_sec_success_stories.scss
@@ -57,6 +57,10 @@
         .card_profile {
             padding: 30px 26px;
 
+            h3 {
+                margin-left: 0px;
+            }
+
             i {
                 min-height: 1px;
             }
