--- a/sass/newland/_sec_cost.scss
+++ b/sass/newland/_sec_cost.scss
@@ -228,6 +228,9 @@
                     margin: 0;
                 }
             }
+            .media-image {
+                max-width: 85%;
+            }
         }
 
         .dubl_line {
