--- a/sass/newland/_sec_profile.scss
+++ b/sass/newland/_sec_profile.scss
@@ -153,15 +153,16 @@
         }
 
         .img_wrapp {
-            height: 0;
+            height: 370px;
 
             img {
+                position: absolute;
                 width: 100%;
                 right: initial;
-                left: 76%;
-                bottom: -220px;
+                left: 50%;
+                bottom: 0px;
                 transform: translateX(-50%);
-                max-width: 345px;
+                max-width: 330px;
             }
         }
         // abs icons
