--- a/sass/newland/_sec_cost.scss
+++ b/sass/newland/_sec_cost.scss
@@ -195,6 +195,9 @@
                     line-height: 130%;
                     color: #58B58B;
                     margin-bottom: 22px;
+                    b {
+                      font-size: 22px;
+                    }
                 }
 
                 .btn-success {
