--- a/sass/newland/_sec_product.scss
+++ b/sass/newland/_sec_product.scss
@@ -77,6 +77,9 @@
                 font-size: 16px;
                 line-height: 153.59%;
                 color: #58B58B;
+                b {
+                  font-size: 16px;
+                }
             }
 
             .btn-success {
