--- a/sass/newland/_sec_product.scss
+++ b/sass/newland/_sec_product.scss
@@ -63,6 +63,17 @@
             padding: 0;
             margin: 0;
         }
+        ul{
+          li{
+            font-style: normal;
+            font-weight: 500;
+            font-size: 13px;
+            line-height: 153.59%;
+            color: #828282;
+            padding: 0;
+            margin: 0;
+          }
+        }
 
         &__footer {
             margin-top: 16px;
