button and price fixes

--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -64,8 +64,8 @@ body {
 
 .btn-success {
     color: #FCFCFC;
-    background: #58B58B;
-    border-color: #58B58B;
+    background: #e3452d;
+    border-color: #e3452d;
     padding: 11px 44px;
 
     &:hover {
