--- a/sass/newland/_common.scss
+++ b/sass/newland/_common.scss
@@ -274,8 +274,8 @@ h2 {
             height: 90px;
             display: flex;
             align-items: center;
-            margin-left: 120px;
-            max-width: 170px;
+            //margin-left: 120px;
+            //max-width: 170px;
         }
     }
 }
