--- a/sass/newland/_header.scss
+++ b/sass/newland/_header.scss
@@ -109,6 +109,7 @@
     .navbar-brand {
         padding-top: 3px;
         padding-bottom: 5px;
+        width: 230px;
     }
 
     .navbar .btn {
